# onramp

./: .gitignore  CLAUDE.md  PRD.md  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: document.py
backend/app/routes/: health.py  process.py  samples.py
backend/app/services/: converter.py  extractor.py  validator.py
backend/scripts/: generate_samples.py
backend/tests/: test_converter.py  test_health.py  test_process.py  test_samples.py  test_validator.py
docs/adr/: 0000-use-adrs.md  0001-llm-first-not-ocr-first.md  0002-pydantic-ai-for-llm-abstraction.md  0003-claude-sonnet-as-default-model.md  0004-single-call-classify-and-extract.md  0005-pymupdf-for-pdf-rendering.md  0006-lazy-agent-initialization.md  0007-mypy-override-for-pymupdf.md  0008-committed-sample-documents.md  0009-post-processing-validation.md  0010-deterministic-risk-scoring.md  0011-native-fetch-over-axios.md  0012-simulated-pipeline-stages.md  0013-lifted-usestate-over-context.md  README.md
frontend/: .env.example  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: applicant-queue.tsx  processing-view.tsx  results-view.tsx  sample-document-cards.tsx  stats-cards.tsx  upload-area.tsx  verification-pipeline.tsx
frontend/src/components/layout/: top-nav.tsx
frontend/src/hooks/: use-pipeline-animation.ts
frontend/src/lib/: api.ts  mock-data.ts  rate-limit.ts  types.ts
frontend/src/pages/: dashboard.tsx
